--- a/raketnow-frontend/src/index.css
+++ b/raketnow-frontend/src/index.css
@@ -2,3 +2,12 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;     
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;            
+}
